test/errors/syntax/too_many_var.yasl.err
SyntaxError: Too many variables in current scope (line 256).
SyntaxError: Too many variables in current scope (line 257).
